edytowanie w notatniku działa poprawnie, tekst align fixed

--- a/MushroomForum/wwwroot/css/site.css
+++ b/MushroomForum/wwwroot/css/site.css
@@ -552,7 +552,7 @@ body {
 /*Gra*/
 body {
     font-family: Arial, sans-serif;
-    text-align: center;
+    text-align: left;
     background: #eef6f0;
 }
 
